# leany

./: .clang-format  .clang-tidy  .cproject  .gitattributes  .gitconfig  .gitignore  .gitmodules  .project  CMakeLists.txt  Doxyfile  LICENSE  Leany.ioc  README.md  REUSE.toml  STM32-inclinometer.ioc  STM32-leveler.ioc  STM32F103C8Tx_FLASH.ld  config_Debug.cppcheck  config_Release.cppcheck  config_debug.cppcheck  config_release.cppcheck  cppcheck_suppressions.xml  sonar-project.properties
Components/: .clang-tidy  CMakeLists.txt
Components/buttons/: buttons.c  buttons.h
Components/display/: SSD1306.c  SSD1306.h  ST7735S.c  ST7735S.h  ST7735_initialisation.c  ST7735_initialisation.h  ST7735_registers.h  icons.c  icons.h  numbersVerdana16.c  numbersVerdana16.h
Components/hardware/buttons/: buttons.c
Components/hardware/display/: SSD1306.c  numbersVerdana16.h
Components/sensor/: LSM6DSO.c  LSM6DSO.h
Components/sysutils/: errorstack.c  errorstack.h  softVersion.c.in  systick.c  systick.h
Core/: CMakeLists.txt
Core/Inc/: ADXL345.h  ADXL345registers.h  FreeRTOSConfig.h  main.h  stm32f1xx_it.h
Core/Inc/errors/: errors.h  errorstack.h
Core/Inc/hardware/accelerometer/: ADXL345.h  ADXL345registers.h
Core/Inc/hardware/buttons/: buttons.h
Core/Inc/hardware/display/: SSD1306.h  SSD1306_registers.h  icons.h  numbersVerdana16.h
Core/Inc/hardware/screen/: SSD1306.h  SSD1306_registers.h  arrowsIcon.h  icons16.h  icons32.h  numbersVerdana16.h
Core/Inc/hardware/sensor/: LSM6DSO.h  LSM6DSO_config_script.h  LSM6DSO_registers.h
Core/Src/: ADXL345.c  dma.c  gpio.c  i2c.c  main.c  spi.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  usart.c
Core/Src/errors/: errors.c  errorstack.c
Core/Src/hardware/accelerometer/: ADXL345.c
Core/Src/hardware/buttons/: buttons.c
Core/Src/hardware/display/: SSD1306.c  icons.c  numbersVerdana16.c
Core/Src/hardware/screen/: SSD1306.c  arrowsIcon.c  icons.c  icons16.c  icons32.c  numbersVerdana16.c
Core/Src/hardware/sensor/: LSM6DSO.c  (+1 more)
firmware/: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  Doxyfile  Leany.ioc  README.md  REUSE.toml  STM32F103XX_FLASH.ld
firmware/Components/: .clang-tidy  CMakeLists.txt
firmware/Components/HAL/: halspi.c  halspi.h
firmware/Components/buttons/: buttons.c
firmware/Components/display/: ST7735S.c  ST7735S.h  ST7735_initialisation.c  icons.c
firmware/Components/sensor/: BMI270.c  BMI270.h  LSM6DSO.c  memsBMI270.c  memsBMI270.h  sensorfusion.c  sensorfusion.h
firmware/Components/sysutils/: debugpin.h  errorstack.c
firmware/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_it.h
firmware/Core/Src/: adc.c  dma.c  freertos.c  gpio.c  i2c.c  iwdg.c  main.c  spi.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  tim.c  usart.c
firmware/Hardware/: .clang-tidy  CMakeLists.txt
firmware/Hardware/HAL/: halspi.c  halspi.h
firmware/Hardware/buttons/: buttons.c  buttons.h
firmware/Hardware/display/: ST7735S.c  ST7735S.h  ST7735_initialisation.c  ST7735_initialisation.h  ST7735_registers.h  st7735_initialisation.c  st7735_initialisation.h  st7735_registers.h  st7735s.c  st7735s.h
firmware/Hardware/gpio/: buttons.c  buttons.h  gpiotask.c  gpiotask.h  led.c  led.h
firmware/Hardware/sensor/: memsBMI270.c  memsBMI270.h  mems_bmi270.c  mems_bmi270.h  sensorfusion.c  sensorfusion.h
firmware/Hardware/sysutils/: debugpin.h  errorstack.c  errorstack.h  gitVersion.cmake  gitversion.cmake  hardware_events.c  hardware_events.h  softVersion.c.in  softVersion.h  softversion.c.in
firmware/UI/: .clang-format  .clang-tidy  CMakeLists.txt  icons.c  icons.h  ui.c  ui.h
firmware/cmake/: gcc-arm-none-eabi.cmake  gcc.cmake  starm-clang.cmake
firmware/cmake/bosch-sensortec/: CMakeLists.txt
firmware/cmake/stm32cubemx/: CMakeLists.txt
firmware/cmake/templates/: Doxyfile.in  README.md.in  fill_templates.cmake  softversion.c.in
firmware/dispatcher/: .clang-tidy  CMakeLists.txt  dispatcher.c  dispatcher.h
firmware/hardware/: CMakeLists.txt
firmware/hardware/battery/: bq25619.c  bq25619.h  bq25619_registers.inc
firmware/hardware/battery_management/: battery_management.c  bq25619_registers.inc
firmware/hardware/display/: st7735_initialisation.c  st7735_initialisation.h  st7735_registers.inc  st7735s.c  st7735s.h
firmware/hardware/gpio/: battery.c  battery.h  buttons.c  buttons.h  debugpin.h  gpiotask.c  gpiotask.h  led.c  led.h
firmware/hardware/hal/: hal_adc.c  hal_adc.h  hal_i2c.c  hal_i2c.h  hal_spi.c  hal_spi.h  halspi.c  halspi.h
firmware/hardware/imu/: .clang-tidy  CMakeLists.txt  imu.c  imu.h  sensorfusion.c  sensorfusion.h
firmware/hardware/serial/: generic_command.inc  scpi_commands.c  scpi_commands.h  scpi_parser.c  scpi_parser.h  serial.c  serial.h
firmware/hardware/sysutils/: errorstack.h  hardware_events.c  hardware_events.h  softversion.h
firmware/messages/: CMakeLists.txt  dispatcher.c  dispatcher.h
firmware/resources/: Doxyfile  check_doxygen_tags.py  check_enum_struct_members_doc.py  check_filenames.sh  install_prerequisites_ubuntu.sh  install_prerequisites_windows.bat  sonar-project.properties
firmware/tasks/: CMakeLists.txt  task_battery.c  task_battery.h  task_dispatcher.c  task_dispatcher.h  task_gpio.c  task_gpio.h  task_imu.c  task_imu.h  task_ui.c  task_ui.h
firmware/tasks/serialtask/: generic_command.inc  scpi_commands.c  scpi_commands.h  scpi_parser.c  scpi_parser.h  task_serial.c  task_serial.h
firmware/tests/: CMakeLists.txt  gcc.cmake  test_sensorfusion.c
firmware/ui/: .clang-tidy  CMakeLists.txt  display.c  display.h  icons.h  ui.c
firmware/ui/assets/: bitmap.c  bitmap.h  fonts.c  fonts.h  icons.c  icons.h  label.c  label.h
firmware/ui/screens/: screen_error.c  screen_error.h  screen_main.c  screen_main.h  screen_system.c  screen_system.h
firmware/utilities/: CMakeLists.txt  hardware_events.c  leany_std.c  leany_std.h  orientation.inc
firmware/utils/: CMakeLists.txt  errorstack.c  errorstack.h  hardware_events.h  leany_std.c  orientation.inc  softversion.h  systick.c  systick.h
(+107 files in other folders)
